crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__catalog.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 761
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
" search —  state:any  kind:any  source:any  role:any  tag:any                                                 "
"╭ Items 3/3 ───────────────────────────────────────────────────╮╭ Details ───────────────────────────────────╮"
"│▶ ● on   skill  style                   eng · org:eng         ││style  ● on                                 │"
"│  ○ off  mcp    jira                    eng · org:eng         ││eng:skill/style                             │"
"│  ◐ shad skill  style                   squad · squad:checkout││                                            │"
"│                                                              ││House style.                                │"
"│                                                              ││                                            │"
"│                                                              ││tags: style                                 │"
"│                                                              ││roles: developer                            │"
"│                                                              ││                                            │"
"│                                                              ││Why                                         │"
"│                                                              ││✓ eng:skill/style  org:eng · winner         │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"╰──────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" / search  s k o r t filter  c clear  a all groups  space toggle  w why   S sync  R refresh  ? help  q quit   "
