crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__catalog_filtered.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 763
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
" search —  state:any  kind:mcp  source:any  role:any  tag:any                                                 "
"╭ Items 1/3 ───────────────────────────────────────────────────╮╭ Details ───────────────────────────────────╮"
"│▶ ○ off  mcp    jira                    eng · org:eng         ││jira  ○ off                                 │"
"│                                                              ││eng:mcp/jira                                │"
"│                                                              ││                                            │"
"│                                                              ││Jira.                                       │"
"│                                                              ││                                            │"
"│                                                              ││tags: jira                                  │"
"│                                                              ││                                            │"
"│                                                              ││w: why this version                         │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"│                                                              ││                                            │"
"╰──────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" / search  s k o r t filter  c clear  a all groups  space toggle  w why   S sync  R refresh  ? help  q quit   "
