crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__groups.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 778
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Your groups ───────────────────────────────────────────────────────────────────────────────────────────────╮"
"│▶ product:billing                            ○ not a member   rule                                    join  │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" enter join/leave   S sync  R refresh  ? help  q quit                                                         "
