crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__help.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 782
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Status ────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│1 enabled items from 2 sources                                                                              │"
"│last sync  2026-09-23╭ Keys (any key closes) ─────────────────────────────────────────╮                     │"
"│fingerprint  lo-fp:AA│  1-5, tab    switch view                                       │                     │"
"│no conflicts         │  ↑ ↓ / j     move                                              │                     │"
"╰─────────────────────│  /           search (catalog)                                  │─────────────────────╯"
"╭ Waiting for review (│  s k o r t   cycle a filter: state, kind, source, role, tag    │─────────────────────╮"
"│▶ squad              │  c           clear filters                                     │                     │"
"│                     │  a           include groups you're not in (catalog)            │                     │"
"│                     │  space / e   enable, disable, prefer, or join the item's group │                     │"
"│                     │  w / enter   why this version (catalog)                        │                     │"
"│                     │  n           preview a source, then y to subscribe (sources)   │                     │"
"│                     │  enter       use a template · join/leave a group · approve     │                     │"
"│                     │  S           sync now                                          │                     │"
"│                     │  R           refresh                                           │                     │"
"│                     │  q, ctrl-c   quit                                              │                     │"
"│                     │                                                                │                     │"
"│                     │                                                                │                     │"
"│                     │                                                                │                     │"
"│                     ╰────────────────────────────────────────────────────────────────╯                     │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" a approve  A approve all   S sync  R refresh  ? help  q quit                                                 "
