crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__sources.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 765
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Sources ────────────────────────────────────────────╮╭ Details ────────────────────────────────────────────╮"
"│▶ squad                         subscribed  11111111 ││squad                                                │"
"│  └ eng                         upstream    22222222 ││/r/squad                                             │"
"│                                                     ││commit 11111111                                      │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"╰─────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" n preview+add  u unsubscribe  enter items   S sync  R refresh  ? help  q quit                                "
