crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__sources_preview.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 771
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Sources ────────────────────────────────────────────╮╭ Preview ────────────────────────────────────────────╮"
"│▶ squad                         subscribed  11111111 ││Preview of /r/team                                   │"
"│  └ eng                         upstream    22222222 ││                                                     │"
"│                                                     ││team  team:t                                         │"
"│                                                     ││  skill  x                                           │"
"│                                                     ││                                                     │"
"│                                                     ││y subscribe and sync · esc discard                   │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"│                                                     ││                                                     │"
"╰─────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯"
" Preview: press y to subscribe and sync, Esc to discard                                                       "
" n preview+add  u unsubscribe  enter items   S sync  R refresh  ? help  q quit                                "
