crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__status.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 780
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Status ────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│1 enabled items from 2 sources                                                                              │"
"│last sync  2026-09-23T10:00:00Z                                                                             │"
"│fingerprint  lo-fp:AAAA-BBBB                                                                                │"
"│no conflicts                                                                                                │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Waiting for review (1) ────────────────────────────────────────────────────────────────────────────────────╮"
"│▶ squad                                      aaaaaaaa → bbbbbbbb  manual-source                             │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" a approve  A approve all   S sync  R refresh  ? help  q quit                                                 "
