crates/loadout-cli/src/tui/snapshots/loadout_cli__tui__view__tests__template_form.snap
---
source: crates/loadout-cli/src/tui/view.rs
assertion_line: 775
expression: screen(&a)
---
" ◆ Loadout  1 Catalog │ 2 Sources │ 3 Templates │ 4 Groups │ 5 Status (1)                                     "
"                                                                                                              "
"╭ Templates ─────────────────────────────────────╮╭ Details ─────────────────────────────────────────────────╮"
"│▶ pr-workflow              eng                  ││eng:template/pr-workflow                                  │"
"│                                                ││                                                          │"
"│                                                ││Variables                                                 │"
"│                                                ││  team  required                                          │"
"│                  ╭ Use eng:template/pr-workflow ────────────────────────────────────────╮                  │"
"│                  │▶ team          ▏                                                     │                  │"
"│                  │  reviewers     2                                                     │ill in a source   │"
"│                  │  skill name    pr-workflow                                           │                  │"
"│                  │  add to source ◀ squad ▶                                             │                  │"
"│                  │                                                                      │                  │"
"│                  │↑↓ move · type to edit · ←→ source · enter next / create · esc cancel │                  │"
"│                  │                                                                      │                  │"
"│                  ╰──────────────────────────────────────────────────────────────────────╯                  │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"╰────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
" lo-fp:AAAA-BBBB  ·  last sync 2026-09-23T10:00:00Z                                                           "
" enter use  x open pull request   S sync  R refresh  ? help  q quit                                           "
